<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_history_modern"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_map_modern"
        android:title="@string/nav_map" />
    
    <!-- Placeholder for center button -->
    <item
        android:id="@+id/nav_placeholder"
        android:title=""
        android:enabled="false" />

    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_history_modern"
        android:title="@string/nav_reports" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_search_modern"
        android:title="@string/nav_profile" />
</menu>
